# Topic_modeling_nlp

./: .gitignore  README.md  master_notebook.ipynb  pyproject.toml  stop_word_fr.txt
ntbks/: test.ipynb  topic_labelling.ipynb
outputs/: chunking_embedding_info.txt  data_info.txt  lexical_diagnostics.txt  ocr_quality.txt  preprocessing_info.txt  topic_modeling_info.txt
outputs/02_data_quality/reports/: ocr_quality.txt
outputs/03_preprocessing/reports/: preprocessing_info.txt
outputs/04_eda/reports/: eda_info.txt
outputs/05_chunking_eval/reports/: chunking_methods_eval.txt
outputs/06_chunking_embedding/reports/: chunking_embedding_info.txt
outputs/07_bertopic/reports/: topic_modeling_info.txt
outputs/09_doc_topic_vectors/reports/: doc_topic_vectors_info.txt
outputs/10_analyses/reports/clustering/: party_clustering_info.txt
outputs/10_analyses/reports/specialisation/: topic_specialization_chi2.txt  (+1 more)
outputs/12_sentiment/reports/: qualitative_extracts.txt  sentiment_info.txt
scripts/: 01_data_load.py  01b_data_analysis.py  02_data_quality.py  02_eda.py  03_data_preprocessing.py  03_data_quality.py  03_preprocessing.py  04_chunking_embedding.py  04_eda.py  04_preprocessing.py  04b_chunking_methods_eval.py  05_chunking_eval.py  05_topic_modeling.py  06_chunking_embedding.py  06_lda_topic_modeling.py  07_bertopic.py  07_document_topic_projection.py  08_lda.py  08_party_clustering_embeddings.py  09_doc_topic_vectors.py  10_analyses.py  11_visualizations.py  12_sentiment.py  12b_topic_positioning.py  13_run_all.py  _family_mapping.py
(+1 files in other folders)
